--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "Server.js",
   "type": "module",
   "scripts": {
-    "start": "npx nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon app.js"
   },
   "repository": {
     "type": "git",
